--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1"
+    
+  },
+  "scripts": {
+    "dev": "nodemon server"
   }
+  
 }
